페이지 상호작용시 mongoDB 에 insert 해줄 API 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,7 @@ spring:
     active: local
   data:
     mongodb:
-      uri: mongodb://localhost:27017
-      database: pageView
+      uri: mongodb://localhost:27017/yh_db
       username: root
       password: 0000
   datasource:
