--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,7 @@ spring:
     active: local
   data:
     mongodb:
-      uri: mongodb://localhost:27017/yh_db
-      username: root
-      password: 0000
+      uri: mongodb://root:0000@localhost:27017/yh_db
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
